--- a/Sprint 6 Challenge/Sprint 6 Challenge/Base.lproj/Main.storyboard
+++ b/Sprint 6 Challenge/Sprint 6 Challenge/Base.lproj/Main.storyboard
@@ -18,13 +18,15 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4A5-qa-hBZ">
-                                <rect key="frame" x="63" y="294" width="290" height="330"/>
+                            <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="4A5-qa-hBZ">
+                                <rect key="frame" x="62" y="273" width="290" height="350"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="KbB-CA-urX">
                                         <rect key="frame" x="8" y="8" width="253" height="227"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="KbB-CA-urX" secondAttribute="height" multiplier="1:1" id="79K-88-YdX"/>
+                                            <constraint firstAttribute="width" constant="240" id="InE-vw-k8H"/>
+                                            <constraint firstAttribute="height" constant="240" id="VFr-pG-Qbi"/>
                                         </constraints>
                                     </imageView>
                                     <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="S2Q-fp-rBj" customClass="CustomControl" customModule="Sprint_6_Challenge" customModuleProvider="target">
@@ -58,7 +60,7 @@
                                     <constraint firstItem="KbB-CA-urX" firstAttribute="top" secondItem="4A5-qa-hBZ" secondAttribute="top" constant="8" id="bFQ-Au-0vj"/>
                                     <constraint firstAttribute="trailing" secondItem="S2Q-fp-rBj" secondAttribute="trailing" constant="8" id="h8p-l2-Dwk"/>
                                     <constraint firstItem="KbB-CA-urX" firstAttribute="leading" secondItem="4A5-qa-hBZ" secondAttribute="leading" constant="8" id="nE3-Ar-JkH"/>
-                                    <constraint firstAttribute="height" constant="330" id="qzo-hL-k9O"/>
+                                    <constraint firstAttribute="height" constant="350" id="qzo-hL-k9O"/>
                                     <constraint firstItem="S2Q-fp-rBj" firstAttribute="leading" secondItem="4A5-qa-hBZ" secondAttribute="leading" constant="8" id="w1Z-nF-bvu"/>
                                     <constraint firstAttribute="trailing" secondItem="KbB-CA-urX" secondAttribute="trailing" constant="8" id="w8d-zl-w1t"/>
                                 </constraints>
